--- a/todo-client/package.json
+++ b/todo-client/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@apollo/client": "^3.12.8",
+    "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-slot": "^1.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.0.6",
     "graphql": "^16.10.0",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
